--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -280,7 +280,6 @@ input[type='checkbox'] {
 
 .accordion-header {
   font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
   font-style: none;
   display: flex;
   justify-content: space-between;
@@ -426,21 +425,25 @@ select.placeholder {
 .home_title .hello1 {
   font-family: SFProBold;
   font-size: 70px;
+  color: #fff
 }
 
-.home_title .hello1 {
-  font-family: SFProBold;
-}
 
 .home_title .welcome {
-  padding-top: 5px;
+  padding-bottom: px;
   font-size: 0.5em;
+}
+
+.welcome1 {
+  padding-bottom: 15px;
 }
 
 .home_title .welcome1 {
   padding-top: 5px;
   font-size: 33px;
   text-align: center;
+  max-width: 80%;
+  color: #fff;
 }
 
 .home_title .linkful {
@@ -893,6 +896,7 @@ td.td-desc {
 
 
 .navhelp {
+  height: 101.5vh;
   background-color: rgb(0, 70, 84);
   display: flex;
   align-items: center;
@@ -915,4 +919,57 @@ td.td-desc {
 .title-hd {
   padding-bottom: 10px;
   font-size: 50px;
+}
+
+.form-hd {
+  border: 2px dashed rgb(156, 156, 156);
+}
+
+
+.form-hd .p-hd {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 170px;
+  color: #000000;
+  font-size: 15px;
+
+}
+
+.form-hd .input-hd {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 35%;
+  outline: none;
+  opacity: 0;
+}
+
+.input-hd:hover {
+  cursor: pointer;
+}
+
+.form-hd .button-hd {
+  margin: 0;
+  color: #fff;
+  background: #16a085;
+  border: none;
+  width: 100%;
+  height: 35px;
+  margin-top: -20px;
+  margin-left: -4px;
+  border-radius: 4px;
+  border-bottom: 4px solid #117A60;
+  transition: all .2s ease;
+  outline: none;
+}
+
+.form-hd .button-hd:hover {
+  background: #149174;
+  color: #0C5645;
+}
+
+.form-hd .button-hd:active {
+  border: 0;
 }
