--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -930,6 +930,30 @@ td.td-desc {
   background-color: rgb(91, 91, 91) !important;
 }
 
+.dark-mode #add-manutencao {
+  color: white !important;
+  background-color: rgb(91, 91, 91) !important;
+}
+
+.dark-mode #add-funcionario {
+  color: white !important;
+  background-color: rgb(91, 91, 91) !important;
+}
+
+.dark-mode #logoutp {
+  color: white !important;
+  background-color: rgb(43, 43, 43) !important;
+}
+
+.dark-mode #bkg {
+  background-color: rgb(43, 43, 43) !important;
+}
+
+.dark-mode #counter {
+  color: white !important;
+  background-color: rgb(43, 43, 43) !important;
+}
+
 .bg-table {
   border-top: 1px solid #d4d4d5;
   /* Borda superior da "linha" */
