--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -861,6 +861,11 @@ td.td-desc {
   font-size: 1.5em;
 }
 
+#dash {
+  width: 100%;
+  height: 680px;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1400px) {
   .card_info {
     line-height: 1.2;
@@ -922,6 +927,10 @@ td.td-desc {
   .img-hd {
     padding-top: 1em;
     height: 450px;
+  }
+
+  #dash {
+    height: 480px;
   }
 }
 
